Add customerId to the product